- Removed UI package and constant class and replaced with StandardCharsets.UTF_8 constant. - Removed string literal and replaced with StandardCharsets.UTF_8